tests/pass/parse/integers/i8/max_fail.leo
function main() {
    let a: i8 = 128;
}