tests/fail/parse/syntax/i8_fail.leo
function main() {
    const i8 = 0u32;
}